raw/Besarianta Prabaswara Sitorus Ezekiel 6426 245150200111041/2024-11-14-08-28-53.ceg/compilation.txt
NT.java:27: error: illegal start of expression
        double hasil = * angka;
                       ^
NT.java:32: error: illegal start of expression
        double hasil = / angka;
                       ^
NT.java:41: error: illegal start of expression
    public static void main(String[] args) {
    ^
3 errors
Not compiled
